v0.2.0-Beta: import overhaul